--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
        </ul> 
        <h2>Top Itineraries</h2>
      </p>
- <figure>
+
+     
+
+     <figure>
   <a href="https://www.freecodecamp.org/learn" target="_blank">
-    <img src="https://snipboard.io/djas9u.jpg" alt="Space cruise with retro vibe">
+    <img src="https://snipboard.io/kPTYOe.jpg" alt="Space cruise with retro vibe">
   </a>
   <figcaption>
     <a href="https://www.freecodecamp.org/learn" target="_blank">
@@ -35,7 +38,7 @@
 
      <figure> 
        <a href="https://www.freecodecamp.org/learn" target="_blank">
-        <img src="https://snipboard.io/Fbt50q.jpg" alt="alien spaceship">
+        <img src="https://snipboard.io/YutxHs.jpg" alt="alien spaceship">
          </a>
       <figcaption>
         Martian to Milky Way Food Crawl (5 Days Culinary Tour)
@@ -44,7 +47,7 @@
 
      <figure>
         <a href="https://www.freecodecamp.org/learn" target="_blank"> 
-        <img src="https://snipboard.io/B4x5F9.jpg" alt="alien city">
+        <img src="https://snipboard.io/ot0KAJ.jpg" alt="alien city">
         </a>  
         <figcaption>
         Explore the BioDomes of Vega XI (7 City - Cultural Tour) 
